@@ -181,6 +181,7 @@ class Asciidoc2ConfluenceTask extends DocToolchainTask {
             } else {
                 allPages = confluenceClient.fetchPagesByAncestorId(pageIds, pageLimit)
             }
+            println("${allPages.size()} pages retrieved")
             allPages
         }
     }
@@ -526,7 +527,6 @@ class Asciidoc2ConfluenceTask extends DocToolchainTask {
         // #938-mksiva: Changed the 3rd parameter from 'config.confluence.spaceKey' to 'confluenceSpaceKey' as it was always taking the default spaceKey
         // instead of the one passed in the input for each row.
         def pages = retrieveAllPages(confluenceSpaceKey)
-        println("pages retrieved")
         // println "Suche nach vorhandener Seite: " + pageTitle
         Map existingPage = pages[realTitleLC]
         def page
